crates/solidity/testing/snapshots/bindings_output/expressions/elementary_casting/v2/generated/0.5.3-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or TypeKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
   ╭─[input.sol:6:9]
   │
 6 │ ╭─▶         payable(a).call("");
   ┆ ┆   
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (6):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["test" @ input.sol:4:14] (function, type: function (address) returns void)
- Def: #3 ["a" @ input.sol:4:27] (parameter, type: address)
- Def: #4 ["Lib" @ input.sol:11:9] (library)
- Def: #5 ["noop" @ input.sol:12:14] (function, type: function (uint256) returns uint256)
- Def: #6 ["x" @ input.sol:12:24] (parameter, type: uint256)

------------------------------------------------------------------------

References (2):
- Ref: ["Lib" @ input.sol:2:11] -> #4
- Ref: ["balance" @ input.sol:5:23] -> built-in

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     using Lib for uint;
    │           ─┬─  
    │            ╰─── ref: 4
    │ 
  4 │     function test(address a) public {
    │              ──┬─         ┬  
    │                ╰───────────── name: 2
    │                           │  
    │                           ╰── name: 3
  5 │         address(this).balance;
    │                       ───┬───  
    │                          ╰───── built-in
    │ 
 11 │ library Lib {
    │         ─┬─  
    │          ╰─── name: 4
 12 │     function noop(uint x) public returns (uint) {}
    │              ──┬─      ┬  
    │                ╰────────── name: 5
    │                        │  
    │                        ╰── name: 6
────╯
